# PalpaPy

./: Readme.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  autodocstring.mustache  devcontainer.json  initializeCommand.sh
src/: __init__.py  palpa_locale.py  palpa_py.py
test/: test_palpa.py
